# Mcaster1TagStack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Capfile  Gemfile  LICENSE  README.md
config/: deploy.rb
config/deploy/: production.rb
daemon/: CMakeLists.txt  README.md
daemon/etc/: ollama.example.yaml  tagstackd.example.yaml
daemon/include/: auth.hpp  db.hpp  directory.hpp
daemon/src/: main.cpp
desktop/: CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac
desktop/src/: AddServerDlg.cpp  AddServerDlg.h  ApiClient.cpp  ApiClient.h  DataQueuePage.cpp  DataQueuePage.h  DbBackupDlg.cpp  DbBackupDlg.h  DbMigrationWizardDlg.cpp  DbMigrationWizardDlg.h  DirectoryPage.cpp  DirectoryPage.h  EventsPage.cpp  EventsPage.h  Icy22Page.cpp  Icy22Page.h  LiveStreamPage.cpp  LiveStreamPage.h  LoggingPage.cpp  LoggingPage.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  Makefile.am  MediaLibraryPage.cpp  MediaLibraryPage.h  MetadataEditorDlg.cpp  MetadataEditorDlg.h  PodcastsPage.cpp  PodcastsPage.h  ScanProgressDlg.cpp  ScanProgressDlg.h  SelectMountDlg.cpp  SelectMountDlg.h  ServersPage.cpp  ServersPage.h  SettingsPage.cpp  SettingsPage.h  SocialcastingPage.cpp  (+4 more)
docs/: API_CONTRACT.md  ARCHITECTURE.md  ICY2_PROTOCOL_SPEC.md  PERSONAS.md  ROADMAP.md  qt-port-map.md
packaging/: README.md
packaging/debian/: tagstackd.service
scripts/: README.md  build-personas.sh  install-cert-for-tagstackd.sh  migrate.sh
shared/: README.md
shared/types/: Icy2Fields.h  MediaItem.h
sql/: 001_init.sql  002_servers.sql  003_media_weight.sql  004_media_extended.sql  005_composer_tables.sql  006_playlist_extended.sql  007_icy2_queue.sql  008_meta_composer_sessions.sql  009_session_rules.sql  010_broadcast_events.sql  011_users_audit.sql  012_stations.sql  013_now_playing.sql  014_spin_history.sql  015_directory_stations.sql  016_cc_user_link.sql  017_user_station_tags.sql  018_tag_aggregate.sql  019_social_accounts.sql  020_station_ownership.sql  021_media_event_ownership.sql  022_podcasts.sql  README.md
web/: README.md
web/app/: bootstrap.php
web/etc/: config.example.php
web/public/: index.php
